Paginas de laravel en espanol

--- a/lang/spark/en.json
+++ b/lang/spark/en.json
@@ -1,8 +1,8 @@
 {
     "An unexpected error occurred and we have notified our support team. Please try again later.": "An unexpected error occurred and we have notified our support team. Please try again later.",
     "Are you sure you want to cancel your subscription?": "Are you sure you want to cancel your subscription?",
-    "Are you sure you would like to switch billing plans?": "Are you sure you would like to switch billing plans?",
     "Are you sure you want to resume your subscription?": "Are you sure you want to resume your subscription?",
+    "Are you sure you would like to switch billing plans?": "Are you sure you would like to switch billing plans?",
     "Billing Management": "Billing Management",
     "Cancel Subscription": "Cancel Subscription",
     "Change Subscription Plan": "Change Subscription Plan",
@@ -15,6 +15,7 @@
     "ex VAT": "ex VAT",
     "Failed Subscription Payment": "Failed Subscription Payment",
     "Having second thoughts about cancelling your subscription? You can instantly reactivate your subscription at any time until the end of your current billing cycle. After your current billing cycle ends, you may choose an entirely new subscription plan.": "Having second thoughts about cancelling your subscription? You can instantly reactivate your subscription at any time until the end of your current billing cycle. After your current billing cycle ends, you may choose an entirely new subscription plan.",
+    "Having second thoughts about cancelling your subscription? You can instantly reactive your subscription at any time until the end of your current billing cycle. After your current billing cycle ends, you may choose an entirely new subscription plan.": "Having second thoughts about cancelling your subscription? You can instantly reactive your subscription at any time until the end of your current billing cycle. After your current billing cycle ends, you may choose an entirely new subscription plan.",
     "It looks like you do not have an active subscription. You may choose one of the subscription plans below to get started. Subscription plans may be changed or cancelled at your convenience.": "It looks like you do not have an active subscription. You may choose one of the subscription plans below to get started. Subscription plans may be changed or cancelled at your convenience.",
     "Loading": "Loading",
     "Managing billing for :billableName": "Managing billing for :billableName",
@@ -31,20 +32,25 @@
     "Signed in as": "Signed in as",
     "Subscribe": "Subscribe",
     "Subscription Pending": "Subscription Pending",
-    "The selected plan is invalid.": "The selected plan is invalid.",
-    "This account does not have an active subscription.": "This account does not have an active subscription.",
-    "This subscription has expired and cannot be resumed. Please create a new subscription.": "This subscription has expired and cannot be resumed. Please create a new subscription.",
     "Terms of Service": "Terms of Service",
+    "The selected plan is invalid.": "The selected plan is invalid.",
+    "There is no active subscription.": "There is no active subscription.",
+    "This account does not have an active subscription.": "This account does not have an active subscription.",
+    "This subscription cannot be resumed. Please create a new subscription.": "This subscription cannot be resumed. Please create a new subscription.",
+    "This subscription has expired and cannot be resumed. Please create a new subscription.": "This subscription has expired and cannot be resumed. Please create a new subscription.",
     "Update Payment Method": "Update Payment Method",
+    "View Receipt": "View Receipt",
     "We are processing your subscription. Once the subscription has successfully processed, this page will update automatically. Typically, this process should only take a few seconds.": "We are processing your subscription. Once the subscription has successfully processed, this page will update automatically. Typically, this process should only take a few seconds.",
     "We are unable to process your payment. Please contact customer support.": "We are unable to process your payment. Please contact customer support.",
     "Whoops! Something went wrong.": "Whoops! Something went wrong.",
     "Yearly": "Yearly",
-    "You may cancel your subscription at any time. Once your subscription has been cancelled, you will have the option to resume the subscription until the end of your current billing cycle.": "You may cancel your subscription at any time. Once your subscription has been cancelled, you will have the option to resume the subscription until the end of your current billing cycle.",
     "You are already subscribed.": "You are already subscribed.",
     "You are currently within your free trial period. Your trial will expire on :date. Starting a new subscription will end your trial.": "You are currently within your free trial period. Your trial will expire on :date. Starting a new subscription will end your trial.",
-    "Your next payment of :amount will be processed on :date.": "Your next payment of :amount will be on :date.",
+    "You may cancel your subscription at any time. Once your subscription has been cancelled, you will have the option to resume the subscription until the end of your current billing cycle.": "You may cancel your subscription at any time. Once your subscription has been cancelled, you will have the option to resume the subscription until the end of your current billing cycle.",
+    "Your current payment method is :paypal.": "Your current payment method is :paypal.",
+    "Your current payment method is a credit card ending in :lastFour that expires on :expiration.": "Your current payment method is a credit card ending in :lastFour that expires on :expiration.",
     "Your last payment of :amount failed. Please update your payment method to retry the failed payment.": "Your last payment of :amount failed. Please update your payment method to retry the failed payment.",
+    "Your next payment of :amount will be processed on :date.": "Your next payment of :amount will be on :date.",
     "Your subscription has been successfully cancelled. You will still have access until the end of your billing period.": "Your subscription has been successfully cancelled. You will still have access until the end of your billing period.",
     "Your subscription was successfully resumed.": "Your subscription was successfully resumed.",
     "Your subscription was successfully updated.": "Your subscription was successfully updated."
